Add .gitignore, fix Makefile, change bugreport email address

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all run
+.PHONY: all run clean
 
 all: testsuite run
 
@@ -6,7 +6,7 @@ testsuite:
 	autom4te --language=autotest -o testsuite testsuite.at
 
 run:
-	./testsuite ROOT_DIR=$(pwd)/../database
+	./testsuite ROOT_DIR=${PWD}/../database/
 
 clean:
-	rm -f ./testsuite
+	rm -rf testsuite testsuite.log testsuite.dir
