Add test to check for presence of metadata

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,12 +1,12 @@
 .PHONY: all run clean
 
-all: database-tests run
+all: clean database-tests run
 
 database-tests:
-	autom4te --language=autotest -o database-tests database-tests.at
+	@autom4te --language=autotest -o database-tests database-tests.at
 
 run:
-	./database-tests ROOT_DIR=${PWD}/../database/
+	@./database-tests ROOT_DIR=${PWD}/../database
 
 clean:
-	rm -rf database-tests database-tests.log database-tests.dir
+	@rm -rf database-tests database-tests.log database-tests.dir
