Make tests pass on macOS, add mock data for tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-.PHONY: all run clean
+.PHONY: all run run-mocks-fail run-mocks-pass clean
 
 all: clean database-tests run
 
@@ -7,6 +7,12 @@ database-tests:
 
 run:
 	@./database-tests ROOT_DIR=${PWD}/../database
+
+run-mocks-pass:
+	@./database-tests ROOT_DIR=${PWD}/mocks/pass/database
+
+run-mocks-fail:
+	@./database-tests ROOT_DIR=${PWD}/mocks/fail/database
 
 clean:
 	@rm -rf database-tests database-tests.log database-tests.dir
