--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Move latest database files under lyrics.git/
-      run: mkdir lyrics.git && mv * lyrics.git
+    - name: Move latest database files under lyrics.git
+      run: mkdir lyrics.git && mv database lyrics.git
 
     - name: Clone lyrics-website-generator.git
       run: git clone git@github.com:Lyrics/lyrics-website-generator.git lyrics-website-generator.git
