--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       run: git clone https://x-access-token:${GITHUB_TOKEN}@github.com/Lyrics/lyrics-website-generator.git lyrics-website-generator.git
 
     - name: Clone lyrics.github.io.git
-      run: git clone https://x-access-token:${secrets.deploy_token}@github.com/Lyrics/lyrics.github.io.git lyrics.github.io.git
+      run: git clone https://x-access-token:${DEPLOY_TOKEN}@github.com/Lyrics/lyrics.github.io.git lyrics.github.io.git
 
     - name: Generate static website files
       run: cd lyrics-website-generator.git && sudo apt-get install python3-setuptools sassc && pip3 install pystache && make
