--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
       run: mkdir lyrics.git && mv database lyrics.git
 
     - name: Clone lyrics-website-generator.git
-      run: git clone https://x-access-token:${GITHUB_TOKEN}@github.com/Lyrics/lyrics-website-generator.git lyrics-website-generator.git
+      run: git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Lyrics/lyrics-website-generator.git lyrics-website-generator.git
 
     - name: Clone lyrics.github.io.git
-      run: git clone https://x-access-token:${DEPLOY_TOKEN}@github.com/Lyrics/lyrics.github.io.git lyrics.github.io.git
+      run: git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Lyrics/lyrics.github.io.git lyrics.github.io.git
 
     - name: Generate static website files
       run: cd lyrics-website-generator.git && sudo apt-get install python3-setuptools sassc && pip3 install pystache && make
@@ -26,9 +26,9 @@ jobs:
     - name: Overwrite and deploy website files
       run: |
         cd lyrics.github.io.git
-        git config user.email "open.lyrics.databasn@gmail.com"
+        git config user.email "open.lyrics.database@gmail.com"
         git config user.name "lyrics-admin"
-        git remote set-url origin https://x-access-token:${DEPLOY_TOKEN}@github.com/Lyrics/lyrics.github.io.git
+        git remote set-url origin https://x-access-token:${{ secrets.DEPLOY_TOKEN }}@github.com/Lyrics/lyrics.github.io.git
         make clean
         mv ../lyrics-website-generator.git/www/* .
         make deploy
