--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
     steps:
     - run: git config --global core.autocrlf false
     - uses: actions/checkout@v2
-    - name: Run Tests 
+    - name: Install dependencies for running tests on Windows
+      if: matrix.os == 'windows-latest'
+      run: choco install cygwin && C:\\tools\\cygwin\\cygwinsetup.exe -q -P autoconf
+    - name: Run Tests
       run: cd tests && make
