add condition to skip the ci
[skip ci]
https://github.com/Lyrics/lyrics/discussions/494

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-
+    if: contains(toJson(github.event.commits), '[skip ci]') == false
     strategy:
       matrix:
         os:
