--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [ master ]
     paths-ignore:
-    - 'README.md'
     - 'docs/'
+    - 'tools/'
+    - 'README.md'
 
 jobs:
   build:
@@ -27,11 +28,30 @@ jobs:
       run: git clone "https://lyrics-admin:${GITHUB_DEPLOY_TOKEN}@github.com/Lyrics/lyrics.github.io.git" lyrics.github.io.git
 
     - name: Generate website files
-      run: cd lyrics-website-generator.git && sudo apt-get install python3-setuptools sassc && pip3 install pystache && make
+      run: |
+        cd ./lyrics-website-generator.git/
+        sudo apt-get install python3-setuptools sassc
+        pip3 install pystache
+        make
+
+    - name: Create Google site ownership verification HTML file
+      run: |
+        cd ./lyrics-website-generator.git/www/
+        echo "google-site-verification: googlec8c6966ec9658f63.html" > googlec8c6966ec9658f63.html
+
+    - name: Create Yandex site ownership verification HTML file
+      run: |
+        cd ./lyrics-website-generator.git/www/
+        echo '<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
+    <body>Verification: 9bc9cfa4ff89bbf7</body>
+</html>' > yandex_9bc9cfa4ff89bbf7.html
 
     - name: Overwrite and deploy website files
       run: |
-        cd lyrics.github.io.git
+        cd ./lyrics.github.io.git/
         git config user.name "Lyrics Admin"
         git config user.email "open.lyrics.database@gmail.com"
         make clean
