--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Move latest database files to be under lyrics.git
-      run: mkdir lyrics.git && mv database lyrics.git
+      run: |
+        mkdir lyrics.git
+        mv database lyrics.git
+        mv translations lyrics.git
 
     - name: Clone lyrics-website-generator.git
       run: git clone "https://lyrics-admin:${GITHUB_TOKEN}@github.com/Lyrics/lyrics-website-generator.git" lyrics-website-generator.git
