--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,7 +42,9 @@ jobs:
 
     - name: Deploy updated website files
       run: |
+        cd ./lyrics.github.io.git/
         git config user.name "Lyrics Admin"
         git config user.email "open.lyrics.database@gmail.com"
+        git add docs
         git commit -m "Update website content"
         git push
