--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,13 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Resolve dependencies
+      run: sudo apt-get install python3-setuptools sassc
+
     - uses: actions/checkout@v2
 
     - name: Move latest database files to be under lyrics.git
       run: |
         mkdir lyrics.git
-        mv database lyrics.git
-        mv translations lyrics.git
+        mv database translations lyrics.git
 
     - name: Clone lyrics-website-generator.git
       run: git clone "https://lyrics-admin:${GITHUB_TOKEN}@github.com/Lyrics/lyrics-website-generator.git" lyrics-website-generator.git
@@ -33,11 +35,9 @@ jobs:
     - name: Generate website files
       run: |
         cd ./lyrics-website-generator.git/
-        sudo apt-get install python3-setuptools sassc
-        pip3 install pystache
-        make
+        make INSTALL_DEPENDENCIES BUILD
 
-    - name: Generate updated website files
+    - name: Copy updated website files
       run: |
         cd ./lyrics.github.io.git/
         rm -rf docs
